--- a/plugin.xml
+++ b/plugin.xml
@@ -19,6 +19,11 @@
                 <param name="android-package" value="com.dialog.hello.ActivityIndicator"/>
             </feature>
         </config-file>
+
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.BLUETOOTH" />
+        </config-file>
+
         <source-file src="src/android/ActivityIndicator.java" target-dir="src/org/apache/cordova/plugin" />
     </platform>
 </plugin>
